# summer_project

./: .env  .gitignore  Dockerfile  README.md  THIRD_PARTY_LICENSES  auto-imports.d.ts  components.d.ts  docker-compose.yml  env.d.ts  eslint.config.js  eslint.config.ts  index.html  mock_warning.json  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.vitest.json  vite.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
API_Scratch/: .coverage  .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  Makefile  NSWWS_SAMPLE_DATA_SNOWFLAKE.json  NSWWS_SAMPLE_DATA_SNOWFLAKE_Formatted.json  NSWWS_SAMPLE_DATA_WFS.json  NSWWS_SAMPLE_DATA_WFS_Formatted.json  PythonRun.sh  ci.yml  jsonFormatVerifier.py  jsonFormater.py  jsonReader.py  metoffice_raw.json  my_output.json  pyproject.toml  pyproject.toml.bak
API_Scratch/data/: metoffice_raw_failed_validation_20250620_004224.json  metoffice_raw_formatted_20250620_150156.json
API_Scratch/src/: health_check_script.py  metoffice_poller.py  metoffice_scratch.py  run_ingest_to_notion.py
API_Scratch/src/Weather_Location_API_Data/common/: Result.py
API_Scratch/src/Weather_Location_API_Data/fetcher/: ArcGISFetcher.py  BaseFetcher.py  TechCrunchFetcher.py
API_Scratch/src/Weather_Location_API_Data/repository/: Notion_Article_Repository.py
API_Scratch/src/Weather_Location_API_Data/service/: Article_To_Repository.py
API_Scratch/src/Weather_Location_API_Data/utils/: LogFileHandler.py
API_Scratch/tests/: mini_test.py  test_logfilehandler.py
API_Scratch_Java/: pom.xml
backend/: Dockerfile.example
(+602 files in other folders)
