[tool.poetry]
name        = "weather-location-api-data"
version     = "0.1.0"
description = "MacroLab AutoFlow Podcast 工具"
authors     = ["jproacademic@gmail.com"]
readme      = "README.md"
packages = [
    { include = "Weather_Location_API_Data", from = "src" }
]

[tool.poetry.dependencies]
python            = "^3.10"
beautifulsoup4    = "^4.13"
requests          = "^2.32"
lxml              = "^5.4"
selenium          = "^4.32"
python-dotenv     = "^1.0"
notion-client     = "^2.3"

[tool.poetry.group.dev.dependencies]
pytest     = "*"
pytest-cov = "*"
flake8     = "*"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"